tests/compilation_tests/03_fail_fn_parameters.stderr
error[E0308]: arguments to this function are incorrect
  --> tests/compilation_tests/03_fail_fn_parameters.rs:43:5
   |
43 |     transform(&bsdt_in, &bst_in);
   |     ^^^^^^^^^ --------  ------- expected `&BatchSeqModelTensor`, found `&BatchSeqTensor`
   |               |
   |               expected `&BatchSeqTensor`, found `&BatchSeqModelTensor`
   |
note: function defined here
  --> tests/compilation_tests/03_fail_fn_parameters.rs:24:4
   |
24 | fn transform(in1: &BatchSeqTensor, in2: &BatchSeqModelTensor) {
   |    ^^^^^^^^^ --------------------  -------------------------
help: swap these arguments
   |
43 |     transform(&bst_in, &bsdt_in);
   |              ~~~~~~~~~~~~~~~~~~~
